--- a/src/components/innerTable/InnerTable.css
+++ b/src/components/innerTable/InnerTable.css
@@ -75,11 +75,30 @@ tfoot th {
 }
 
 .rankingContainer {
-    width: 25%;
+    width: 30%;
     border: 1px solid black
 }
 
 .innerLeft--container {
-    width: 75%;
+    width: 70%;
     margin-right: 10px;
+}
+
+.pagination-controls {
+    margin: 10px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 1200px) {
+    .parentContainer {
+        display: flex;
+        flex-direction: column-reverse !important;
+    }
+
+    .innerLeft--container {
+        width: 100%;
+        margin-right: 10px;
+    }
 }
